--- a/package.json
+++ b/package.json
@@ -13,20 +13,27 @@
     "clean": "rimraf dist",
     "copyfonts": "copyfiles -f node_modules/font-awesome/fonts/* dist/fonts",
     "imgmin": "imagemin img/* -o dist/img",
-    "usemin":"usemin contactus.html -d dist --htmlmin -o dist/contactus.html && usemin aboutus.html -d dist --htmlmin -o dist/aboutus.html  && usemin index.html -d dist --htmlmin -o dist/index.html",
-    "build":"npm run clean && npm run copyfonts && npm run imgmin && npm run usemin"
+    "usemin": "usemin contactus.html -d dist --htmlmin -o dist/contactus.html && usemin aboutus.html -d dist --htmlmin -o dist/aboutus.html  && usemin index.html -d dist --htmlmin -o dist/index.html",
+    "build": "npm run clean && npm run copyfonts && npm run imgmin && npm run usemin"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
     "connect-history-api-fallback": "^1.6.0",
     "cssmin": "^0.4.3",
+    "grunt": "^1.1.0",
+    "grunt-browser-sync": "^2.2.0",
+    "grunt-cli": "^1.3.2",
+    "grunt-contrib-watch": "^1.1.0",
+    "grunt-sass": "^3.1.0",
     "htmlmin": "0.0.7",
+    "jit-grunt": "^0.10.0",
     "lite-server": "^2.5.4",
     "node-sass": "^4.14.1",
     "onchange": "^7.0.2",
     "parallelshell": "^3.0.2",
     "rimraf": "^3.0.2",
+    "time-grunt": "^2.0.0",
     "uglifyjs": "^2.4.11",
     "usemin-cli": "^0.6.0"
   },
