--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "browser-sync": "^2.26.7",
     "connect-history-api-fallback": "^1.6.0",
     "cssmin": "^0.4.3",
     "grunt": "^1.1.0",
@@ -34,6 +35,8 @@
     "grunt-filerev": "^2.3.1",
     "grunt-sass": "^3.1.0",
     "grunt-usemin": "^3.1.1",
+    "gulp": "^4.0.2",
+    "gulp-sass": "^4.1.0",
     "htmlmin": "0.0.7",
     "jit-grunt": "^0.10.0",
     "lite-server": "^2.5.4",
