--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "browser-sync": "^2.26.7",
     "connect-history-api-fallback": "^1.6.0",
     "cssmin": "^0.4.3",
+    "del": "^5.1.0",
     "grunt": "^1.1.0",
     "grunt-browser-sync": "^2.2.0",
     "grunt-cli": "^1.3.2",
@@ -36,7 +37,15 @@
     "grunt-sass": "^3.1.0",
     "grunt-usemin": "^3.1.1",
     "gulp": "^4.0.2",
+    "gulp-clean": "^0.4.0",
+    "gulp-clean-css": "^4.3.0",
+    "gulp-flatmap": "^1.0.2",
+    "gulp-htmlmin": "^5.0.1",
+    "gulp-imagemin": "^7.1.0",
+    "gulp-rev": "^9.0.0",
     "gulp-sass": "^4.1.0",
+    "gulp-uglify": "^3.0.2",
+    "gulp-usemin": "^0.3.30",
     "htmlmin": "0.0.7",
     "jit-grunt": "^0.10.0",
     "lite-server": "^2.5.4",
